# Dead-Sector

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  dead-sector.sav  release.sh  steam_appid.txt
.github/workflows/: build.yml  release.yml
assets/actions/: game_actions.vdf
cmake/: toolchain-mingw64.cmake
installer/: dead-sector.desktop  dead-sector.nsi
scripts/: gen_achievement_icons.py  gen_logo.py  gen_steam_assets.py  release.sh  tag-release.sh
src/: Game.cpp  Game.hpp  main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.hpp
src/core/: Bindings.hpp  Constants.hpp  DisplaySettings.hpp  Events.hpp  Mods.hpp  Programs.hpp  SaveSystem.cpp  SaveSystem.hpp  Worlds.hpp
src/debug/: DebugOverlay.cpp  DebugOverlay.hpp
src/entities/: Avatar.cpp  Avatar.hpp  BossEnemy.cpp  BossEnemy.hpp  DataConstruct.cpp  DataConstruct.hpp  DataPacket.hpp  EnemyProjectile.cpp  EnemyProjectile.hpp  Entity.cpp  Entity.hpp  HunterICE.cpp  HunterICE.hpp  LeechICE.cpp  LeechICE.hpp  MirrorICE.cpp  MirrorICE.hpp  PhantomICE.cpp  PhantomICE.hpp  Projectile.cpp  Projectile.hpp  PulseMine.cpp  PulseMine.hpp  SentryICE.cpp  SentryICE.hpp  SpawnerICE.cpp  SpawnerICE.hpp
src/math/: Vec2.hpp
src/platform/: app.rc  app.rc.in
src/renderer/: BuildChart.hpp  HUD.cpp  HUD.hpp  VectorRenderer.cpp  VectorRenderer.hpp
src/scenes/: CombatScene.cpp  CombatScene.hpp  CombatSceneRender.cpp  CombatSceneUpdate.cpp  CreditsScene.cpp  CreditsScene.hpp  DifficultyScene.cpp  DifficultyScene.hpp  EventScene.cpp  EventScene.hpp  GameOverScene.cpp  GameOverScene.hpp  IScene.hpp  KeybindsScene.cpp  KeybindsScene.hpp  LeaderboardScene.cpp  LeaderboardScene.hpp  LoadoutScene.cpp  LoadoutScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  MapScene.cpp  MapScene.hpp  NodeCompleteScene.cpp  NodeCompleteScene.hpp  RunSummaryScene.cpp  RunSummaryScene.hpp  SceneContext.hpp  SceneManager.cpp  SceneManager.hpp  SettingsScene.cpp  SettingsScene.hpp  ShipSelectScene.cpp  ShipSelectScene.hpp  ShopScene.cpp  ShopScene.hpp  VictoryScene.cpp  VictoryScene.hpp  WorldCompleteScene.cpp  WorldCompleteScene.hpp  (+2 more)
src/steam/: SteamManager.cpp  SteamManager.hpp
src/systems/: AISystem.cpp  AISystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  FragmentSystem.cpp  FragmentSystem.hpp  ModSystem.cpp  ModSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  ProgramSystem.cpp  ProgramSystem.hpp  SpawnManager.cpp  SpawnManager.hpp  TraceSystem.cpp  TraceSystem.hpp  WallSystem.cpp  WallSystem.hpp
src/world/: Node.hpp  NodeMap.cpp  NodeMap.hpp
steampipe/output/: depot_build_4532541.vdf  depot_build_4532542.vdf
steampipe/scripts/: app_build_4532540.vdf  depot_build_4532541.vdf  depot_build_4532542.vdf
tests/: test_mod_system.cpp  test_save_system.cpp  test_trace_system.cpp
